kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arthurvardevanyan
  namespace: arthurvardevanyan-com
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: arthurvardevanyan
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: arthurvardevanyan
      annotations:
        enable.version-checker.io/arthurvardevanyan: "false"
    spec:
      hostname: arthurvardevanyan
      restartPolicy: Always
      automountServiceAccountToken: false
      enableServiceLinks: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
      containers:
        - image: registry.arthurvardevanyan.com/apps/arthurvardevanyan:<VERSION>
          imagePullPolicy: IfNotPresent
          name: arthurvardevanyan
          securityContext:
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "25m"
              memory: "24M"
              ephemeral-storage: "100Mi"
            limits:
              cpu: "100m"
              memory: "48Mi"
              ephemeral-storage: "100Mi"
          startupProbe:
            httpGet:
              path: /startupz
              port: 8080
            initialDelaySeconds: 1
            timeoutSeconds: 1
            periodSeconds: 1
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 1
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 1
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3
