kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arthurvardevanyan
  namespace: arthurvardevanyan-com
spec:
  selector:
    app: arthurvardevanyan
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
